# iMenu-webapp

./: .gitignore  Main.hs  README.md  app.cabal  package.json  stack.yaml
Core/Category/: Controller.hs  DAO.hs  Service.hs  Types.hs
Core/Item/: Controller.hs  DAO.hs  Service.hs  Types.hs
Core/Order/: Controller.hs  DAO.hs  Service.hs  Types.hs
Platform/: Home.hs  JSONUtil.hs  JWT.hs  Postgres.hs  Types.hs
Views/: Home.hs  Index.hs  Utils.hs
front/: package.json
front/public/: index.html
front/src/: App.css  App.js
front/src/components/: AddItem.js  Admin.js  DisplayBoard.js  Header.js  Items.js  Ops.js  Order.js  OrderSent.js  Table.js  Tables.js
front/src/services/: ItemService.js  Service.js
postgresql/: v1_initial.sql
