name:                app
version:             0.1.0.0
synopsis:            Scotty Webapp
description:         Starter kit project for Scotty Apps
homepage:            https://github.com/BRitorto/scotty-webapp
license:             AllRightsReserved
author:              Bianca Ritorto
maintainer:          ritortobianca@gmail.com
copyright:           Bianca Ritorto (c)
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  other-modules:       Client.CSS
                       Views.Home
                       Views.Utils
                       Core.Item.Controller
                       Core.Item.Types
                       Core.Item.DAO
                       Core.Item.Service
                       Core.Category.Controller
                       Core.Category.Service
                       Core.Category.DAO
                       Core.Category.Types
                       Core.Order.Types
                       Core.Order.Service
                       Core.Order.DAO
                       Core.Order.Controller
                       Platform.Home
                       Platform.Types
                       Platform.Postgres
                       Platform.JSONUtil
  build-depends:       base >=4.3.1,
                       wai-extra,
                       wai-cors,
                       wai,
                       warp,
                       warp-tls,
                       wai-middleware-static,
                       scotty,
                       clay,
                       text,
                       blaze-html,
                       blaze-markup,
                       aeson,
                       classy-prelude,
                       postgresql-simple,
                       time,
                       http-types,
                       slug >= 0.1.7,
                       aeson,
                       template-haskell,
                       mtl,
                       convertible,
                       data-has,
                       resource-pool,
                       postgresql-simple-migration,
                       digestive-functors-aeson,
                       digestive-functors,
                       securemem
  default-language:    Haskell2010

source-repository head
   type: git
   location: https://github.com/BRitorto/scotty-webapp